# assist-me

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: amazon_setup.md  calendar_setup.md  gmail_setup.md  http_transport.md  imessage_setup.md  notes_setup.md  slack_setup.md  whatsapp_setup.md
prompts/: README.md  amazon_tracker.md  calendar_assistant.md  communication_search.md  kids_schedule_organizer.md  meal_planner.md  todo_list_generator.md  travel_planner.md
src/: __init__.py  http_server.py  server.py
src/config/: __init__.py  settings.py
src/services/: __init__.py  oauth.py
src/tools/: __init__.py  amazon.py  calendar.py  gmail.py  imessage.py  notes.py  slack.py  whatsapp.py
