[project]
name = "assist-me-mcp-server"
version = "0.1.0"
description = "Personal assistant MCP server with Gmail, Calendar, iMessage, Notes, WhatsApp, Slack, and Amazon integrations"
authors = [{name = "Kuldeep Singh"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.26.0",
    "starlette>=0.45.0",
    "uvicorn>=0.34.0",
    "google-auth>=2.36.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.158.0",
    "slack-sdk>=3.34.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.11",
    "pydantic>=2.10.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "black>=24.10.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
assist-me-server = "src.server:main"
